[package]
name = "w-kiva-moe"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }

anyhow = { version = "1.0.80", features = ["backtrace"] }
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["env", "derive", "string"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.22"
serde_json = "1.0.142"
